--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.35.0",
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
